Update HighLevelDataSetup to work in preview